--- a/files/kodi.desktop
+++ b/files/kodi.desktop
@@ -1,4 +1,5 @@
 [Desktop Entry]
+Type=Application
 Version=1.0
 Name=Kodi
 GenericName=Media Center
@@ -9,10 +10,9 @@ Comment[zh_CN]=管理和查看您的媒体
 Exec=kodi
 Icon=kodi
 Terminal=false
-Type=Application
-Categories=AudioVideo;Video;Player;TV;
-
 Actions=Fullscreen;Standalone;
+Categories=AudioVideo;Video;Player;TV;
+StartupWMClass=kodi
 
 [Desktop Action Fullscreen]
 Name=Open in fullscreen
